--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-native-super-grid": "^5.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "typescript": "^5.3.0"
+    "typescript": "^5.3.0",
+    "expo-updates": "~0.24.11"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
