--- a/package.json
+++ b/package.json
@@ -15,8 +15,9 @@
     "@react-navigation/bottom-tabs": "^6.5.14",
     "@react-navigation/native-stack": "^6.9.18",
     "@types/react": "~18.2.45",
-    "expo": "^50.0.7",
+    "expo": "^50.0.8",
     "expo-status-bar": "~1.11.1",
+    "expo-updates": "~0.24.11",
     "react": "18.2.0",
     "react-dom": "18.2.0",
     "react-grid-gallery": "^1.0.1-alpha.0",
@@ -27,8 +28,7 @@
     "react-native-super-grid": "^5.0.0",
     "react-native-web": "~0.19.6",
     "react-navigation": "^5.0.0",
-    "typescript": "^5.3.0",
-    "expo-updates": "~0.24.11"
+    "typescript": "^5.3.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0"
